# finance-app

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  TODO.md  brief.md  examples.md  identity.md  rules.md
docs/: CONTEXT.md  changelog.md  data-handling.md
fixtures/: README.md  generate.py
ops/: CONTEXT.md
planning/: CONTEXT.md  PLAN.md  brief-to-solution.md
reference/: README.md  bank-csv-notes.md  bank_a.csv  (+2 more)
src/backend/: alembic.ini  cli.py  main.py  pyproject.toml
src/backend/adapters/: __init__.py  bank_a.py  bank_b.py
src/backend/api/: accounts.py  auth.py  flags.py  forecast.py  imports.py  loans.py  spend.py
src/backend/core/: config.py  database.py  deps.py  security.py  types.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 0001_initial.py  0002_v1_domains_and_lookups.py  0003_v1_core_entities.py  0004_v1_transactional.py  0005_v1_available_balance.py  0006_v1_loan_dates.py  0007_v1_budgets.py  0008_v1_flagging.py
src/backend/models/: __init__.py  account.py  audit_log.py  budget.py  category.py  flag.py  import_batch.py  lookups.py  merchant.py  rule.py  session.py  transaction.py  user.py
src/backend/schemas/: accounts.py  auth.py  flags.py  forecast.py  imports.py  spend.py
src/backend/services/: accounts.py  auditing.py  auth.py  flagging.py  forecast.py  import_engine.py  merchants.py  seed.py  spend.py  transactions.py
src/backend/tests/: conftest.py  test_auth.py  test_phase1_schema.py  test_phase2_adapters.py  test_phase2_import.py  test_phase2_seed.py  test_phase5_flagging.py
(+64 files in other folders)
