[project]
name = "finance-app-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "argon2-cffi>=23.1.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
